software-layer/k8s/apps/staging/kube-prometheus-stack/ingresses.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus
spec:
  rules:
    - host: grafana-stg.home.bcbrookman.com
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: prometheus-stg.home.bcbrookman.com
      http:
        paths:
          - backend:
              service:
                name: kube-prometheus-stack-prometheus
                port:
                  number: 9090
            path: /
            pathType: Prefix
